# sail-arm

./: LICENSE  README.md  coq-sail-arm.opam
arm-v8.5-a/: LICENSE  Makefile  README.md  _CoqProject  aarch64_extras.lem  aarch64_extras.v  boot.sh  build.sh  clz.sail  coq.patch  coq_termination.sail  signext.sail  translate_address.isail
arm-v8.5-a/model/: aarch32.sail  aarch64.sail  aarch64_decode.sail  aarch64_float.sail  aarch64_vector.sail  aarch_decode.sail  aarch_interface.sail  aarch_mem.sail  aarch_regfp.sail  aarch_types.sail  devices.sail  elfmain.sail  main.sail  no_devices.sail  prelude.sail  sail.json
arm-v8.5-a/snapshots/: README.md
arm-v9.3-a/: .gitignore  LICENSE  Makefile  README.md
arm-v9.3-a/boot/: boot.sh
arm-v9.3-a/src/: builtins.sail  config.sail  coq_termination.sail  decode_start.sail  devices.sail  elfmain.sail  event_clauses.sail  fetch.sail  impdefs.sail  instrs32.sail  interface.sail  interrupts.sail  isla_main.sail  map_clauses.sail  mem.sail  no_devices.sail  prelude.sail  step.sail  stubs.sail  sysops.sail
arm-v9.4-a/: .gitignore  LICENSE  Makefile  README.md  sail-lem-flags
arm-v9.4-a/boot/: boot.sh  config-linux-6.0.7
arm-v9.4-a/coq/: arm_extras.v
arm-v9.4-a/ir/: armv9.toml
arm-v9.4-a/isabelle/: ROOT
arm-v9.4-a/src/: builtins.sail  coq_termination.sail  decode_end.sail  decode_start.sail  devices.sail  elfmain.sail  event_clauses.sail  fetch.sail  impdefs.sail  instrs32.sail  instrs64.sail  instrs64_sme.sail  instrs64_sve.sail  int_devices.sail  interface.sail  interrupts.sail  isla_main.sail  isla_splice.sail  mem.sail  (+8 more)
(+141 files in other folders)
